# SlicerMONAIViz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SlicerMONAIViz.py  setup.cfg
MONAIViz/: CMakeLists.txt  MONAIViz.py
MONAIViz/MONAIVizLib/: utils.py
MONAIViz/Resources/UI/: MONAITransformDialog.ui  MONAIViz.ui
Resources/UI/: MONAIDictionaryDialog.ui  SlicerMONAIViz.ui
SlicerMONAIVizLib/: __init__.py  utils.py
